--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/oldtweets.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/oldTweets.css" type="text/css" />
 <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
   
   <script type="text/javascript" src="/scripts/app.js"></script>
