extra div tag removed(commented out section

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <h2 >LOREM IPSUM</h2> 
         <div class="postInfo"> Time ago
           <span>icons</span> -->
-        </div>
+        <!-- </div> -->
     </section>
   </main>
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.js"></script>
