--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Tweeter - Reboot</title>
-  
+  <title>Tweeter </title>
+  <link rel="icon" type="image/png" href="https://png.icons8.com/color/50/000000/year-of-rooster.png">
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-  
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/oldTweets.css" type="text/css" />
-<script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+  <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
   
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/counter.js"></script>
@@ -21,7 +20,7 @@
   
   <!-- Top nav bar (fixed) -->
   <nav id="nav-bar">
-    <img class="logo" src="/images/bird.png">
+    <img class="logo" src="https://png.icons8.com/color/50/000000/dove.png">
     <span class="header">Tweeter</span>
     <button  class="toggle">COMPOSE</button>
   </nav>
@@ -37,17 +36,18 @@
       </form>
     </section>
     <section class="oldTweets">
-        <!-- <div class="userInfo">Avatar and user info
-          <img src="https://icons8.com/icon/20563/avatar">
-          <span>username</span>
-        </div>
-        <h2 >LOREM IPSUM</h2> 
-        <div class="postInfo"> Time ago
-          <span>icons</span> -->
+      <!-- <div class="userInfo">Avatar and user info
+        <img src="https://icons8.com/icon/20563/avatar">
+        <span>username</span>
+      </div>
+      <h2 >LOREM IPSUM</h2> 
+      <div class="postInfo"> Time ago
+        <span>icons</span> -->
         <!-- </div> -->
-    </section>
-  </main>
-  <script  src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.js"></script>
-</body>
-<footer>This is the bottom of the page. </footer>
-</html>
+      </section>
+    </main>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.js"></script>
+  </body>
+  <footer>This is the bottom of the page. </footer>
+  </html>
+  
