Textarea reset upon submit

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <h2>Compose Tweet</h2>
       <form method="POST" action="/tweets" id="myform"> 
         <textarea name="text" placeholder="What are you humming about?"></textarea>
-        <button type="submit" value="Tweet">Tweet</button>
+        <button class="sendTweet" type="submit" value="Tweet">Tweet</button>
         <span class="counter" >140</span>
       </form>
     </section>
