--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
   <title>Tweeter </title>
   <link rel="icon" type="image/png" href="https://png.icons8.com/cotton/48/000000/twitter.png">
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/oldTweets.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
   
   <script type="text/javascript" src="/scripts/app.js"></script>
