Stretch: button and hover effects corrected

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
 <body>
   <!-- Top nav bar (fixed) -->
   <nav id="nav-bar">
-    <img class="logo" src="https://png.icons8.com/cotton/48/000000/twitter.png">
+    <span><img class="logo" src="https://png.icons8.com/cotton/48/000000/twitter.png">
     <span class="header">Tweeter</span>
-    <button  class="toggle">COMPOSE</button>
+    
+    <button  class="toggle"><img class="ink" src="/images/pen.png">COMPOSE</button>
+    </span>
   </nav>
   
   <!-- Page-specific (main) content here -->
