--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/counter.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
 
 <body>
